[project]
name = "prisk"
version = "0.0.1"
authors = [
  { name="Ruben Kerkhofs", email="ruben.kerkhofs@kuleuven.be"},
  { name="Mark Bernhofen", email="mark.bernhofen@eci.ox.ac.uk"}
]
description = "PRISK - Physical risk framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
